      - But this doesn't mean anything right now because the Unknown Dimension doesn't exist.
    Now that we have a standard generator to power your machines, you won't need as
      many Energy Crystals. Changed the default tries to generate Gem Ore from 4 to 3.
    Reduced the default number of Ores generated.
  No longer registers a Steel smelting recipe if Immersive Engineering or Mekanism is installed.
  Changed the Steel smelting recipe to a Blast Furnace recipe.
  The Dimensional Anchor now has a shaped crafting recipe, like how it was in Minecraft 1.12
    and earlier. (still doesn't do anything.)
  Items which have an alternate recipe now have both recipes in the same group.
  Don't know why the Magic Infuser produces a Fortune II Book, but I've changed that back to
    Fortune I.
FIXED:
  Finally added the ability to get those Advancements that you couldn't get before,
    such as Fire Laser, Fire Laser the Maximum Distance, Portal, World Destroyer,
    and Convert a Thousand Gems.
  Fixed advancements logging errors for items that were removed or disabled, I think.
  Fixed not translating block and item subtitles in their tooltips.
  Fixed the Magic Infuser producing Enchanted Books incorrectly.
REMOVED:
  Removed the ability to move some items into other Creative Tabs.
  Removed the Unknown Technology item.
  Removed ADDSynthCore advancements for Caution Block, Music Box, and Scythes.
KNOWN PROBLEMS:
  You can't disable anything in the config files / Config files possibly not working.



v1.3.4 - December 28, 2020
  Major code optimizations and maintenance.
  Fix Laser Distance or Energy not saving on world reload.
  Energy stored in Batteries is now balanaced across all batteries on the
    Energy Network.
  Fixed several errors with the Universal Energy Interface.
  Batteries that are removed now redistribute any leftover energy to other
    connected batteries.
  Fix Universal Energy Interface not depositing energy into Energy